# cln-startos

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  UPDATING.md  check-rpc.sh  check-synced.sh  check-web-ui.sh  config_rules.yaml  config_spec.yaml  docker_entrypoint.sh  instructions.md  manifest.yaml  package-lock.json  package.json  s9pk.mk
.github/workflows/: buildService.yml  releaseService.yml
Old/: check-rpc.sh  check-web-ui.sh
Old/actions/: generate-lnlink.sh
Old/docs/: instructions.md
actions/: delete-gossip.sh  generate-rune.sh  rescan-blockchain.sh
assets/: .backupignore  entrypoint.sh
assets/compat/: backup-create.sh  backup-restore.sh  bitcoind.rules.yaml  btc-rpc-proxy.rules.yaml  config_spec.yaml
configurator/: Cargo.toml
configurator/src/: config.template  main.rs
docs/: instructions.md  wallets.md
docs/integrations/: spark.md
docs/wallet-integrations/: alby-extension.md  rtl.md  zeus.md
scripts/: build.ts  deps.ts  embassy-pre.js  embassy.js  embassy.ts  test.ts
scripts/models/: setConfig.ts
scripts/procedures/: backups.ts  dependencies.ts  getAlias.ts  getConfig.ts  migrations.ts  properties.ts  setConfig.ts
scripts/services/: dependencies.ts  getAlias.ts  getConfig.ts  migrations.ts  properties.ts  setConfig.ts
startos/: backups.ts  dependencies.ts  interfaces.ts  main.ts  manifest.ts  utils.ts
startos/actions/: deleteGossipStore.ts  displaySeed.ts  generateRune.ts  index.ts  nodeID.ts  nodeInfo.ts  rescanBlockchain.ts  resetPassword.ts
(+58 files in other folders)
